--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==0.51.0
-pandas==0.25.2
-plotly-express==0.4.1
-seaborn==0.9.0
-folium==0.10.0
-requests==2.22.0
+streamlit==0.84.1
+pandas==1.3.0
+shap==0.39.0
+lightgbm==3.2.1
+scikit-learn==0.24.2
 
